@@ -28,6 +28,7 @@ Paul Davis
 2009-07-22 Stephane Letz  <letz@grame.fr>
 
 	* Version 1.9.4 started.
+    * Solaris boomer backend now working in capture or playback only mode.
 
 2009-07-17 Stephane Letz  <letz@grame.fr>
 
